fix potential profile view collapse

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -390,7 +390,7 @@ mjx-container[display="true"] { overflow-x: auto; overflow-y: hidden; max-width:
   .photo-cell { display: none; }
   .intro-cell { width: 100% !important; max-width: 100% !important; }
   .profile-pic-mobile {
-    display: block;
+    display: block !important;
     float: right;
     width: 132px;
     height: 132px;
